multi-device support added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
           <button name="val" class="power">
             <i class="fas fa-power-off switch"></i>
           </button>
+          <div class="g-select">
+            <select name="gadget" id="g">
+              <option value="fan">Fan</option>
+              <option value="light">Light</option>
+            </select>
+            <input name="uip" type="text" autocomplete="off" value="0" />
+          </div>
         </form>
       </main>
       <footer>
